fix(styles): adjust height of main container on small screens

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ button {
 /* Github User: @murselsen */
 @media (max-width: 400px) {
   .main-container {
-    height: 50%;
+    height: 80%;
   }
   .clock-container {
     margin-top: 30px;
